Fixed UI bug where button is hidden on mobile.  -> Put on bottom instead of top of map.

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ html, body {
     padding: 0;
 }
 
+.public-art-control {
+    padding: 30px;
+}
+
 .public-art-ui {
     background-color: #fff;
     border: 2px solid #fff;
@@ -21,7 +25,7 @@ html, body {
     text-align: center;
 }
 
-.public-art-text {
+.public-art-button {
     color: rgb(25,25,25);
     font-family: Roboto, Arial, sans-serif;
     font-size: 16px;
@@ -29,8 +33,11 @@ html, body {
     padding-left: 5px;
     padding-right: 5px;
     display: inline-block;
+    margin: 5px 0 5px 5px;
 }
 
 .public-art-dropdown {
+    margin: 5px 5px 5px 0;
     display: inline-block;
+    min-width: 80px;
 }
